# hentaifox

./: LICENSE  README.md  main.py  pyproject.toml  render.yaml
app/: __main__.py  config.py  routes.py  scrape.py
app/static/: styles.css
app/templates/: index.html
