[project]
name = "hentaifox"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Alejandro González Momblán", email = "agelrenorenardo@gmail.com" },
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
types = [
    "types-requests>=2.32.0.20250328",
    "types-beautifulsoup4>=4.12.0.20250204",
]
[tool.pdm]
distribution = false
