[project]
name = "hentaifox"
version = "0.1.0"
description = "A simple web application to extract Hentaifox doujinshi information as an API."
authors = [
    { name = "Alejandro González Momblán", email = "agelrenorenardo@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
types = [
    "types-requests>=2.32.0.20250328",
    "types-beautifulsoup4>=4.12.0.20250204",
]
